BUG-DFC-13095 - Exam results helpline | Show message link overlaps information icon on smaller screens (#279)
Reduced padding between Show message / Hide message and fixed issue with overlapping Show/Hide message text with main content of banner in national_careers_toolkit

--- a/src/gds_service_toolkit/assets/src/frontend/sass/patterns/banner-bar.scss
+++ b/src/gds_service_toolkit/assets/src/frontend/sass/patterns/banner-bar.scss
@@ -40,7 +40,7 @@
 .global-bar .global-bar-message-container .global-bar__dismiss {
   display: inline-block;
   position: relative;
-  margin-top: 20px
+  margin-top: 10px
 }
 
 @media (min-width: 40.0625em) {
