--- a/src/gds_toolkit/assets/src/frontend/sass/includes/_custom.scss
+++ b/src/gds_toolkit/assets/src/frontend/sass/includes/_custom.scss
@@ -132,7 +132,7 @@
         .global-bar__dismiss {
           margin-left:50px;
           position: relative !important;
-          margin-top: 20px !important;
+          margin-top: 10px !important;
         }
       }
     }
