--- a/src/nationalcareers_toolkit/assets/src/frontend/sass/includes/_custom-banner.scss
+++ b/src/nationalcareers_toolkit/assets/src/frontend/sass/includes/_custom-banner.scss
@@ -103,6 +103,8 @@ $global-bar-background-colour: #ffdd00;
        .global-bar-message-container {
          .global-bar__dismiss {
            margin-left:50px;
+           position:relative;
+           padding-top:10px;
          }
        }
      }
